--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD com Javascript, HTML e CSS</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Capítulo 03 - aula 05 - CRUD</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <h1>Cadastro de nomes</h1>
     <form>
-        <label>
-            Nome:
-            <input 
-                type="text" 
-                id="inputName"
-                placeholder="Informe um nome aqui..." 
-            />
-        </label>
+      <label>
+        Nome:
+        <input
+          id="inputName"
+          type="text"
+          placeholder="Informe um nome aqui..."
+        />
+      </label>
     </form>
 
     <h2>Nomes cadastrados até o momento</h2>
     <div id="names"></div>
 
     <script src="./js/script.js"></script>
-</body>
+  </body>
 </html>
